# mpc4j

./: .gitignore  CHANGELOG.md  INSTRUCTIONS.md  PAPERS.md  README.md  pom.xml
mpc4j-native-fhe/: CMakeLists.txt  README.md  apsi.cpp  apsi.h  index_pir.cpp  index_pir.h  polynomials.cpp  polynomials.h  random.cpp  random.h  serialize.cpp  serialize.h  utils.cpp  utils.h
mpc4j-native-fhe/mtg/: edu_alibaba_mpc4j_s2pc_pcg_mtg_zp64_core_rss19_Rss19Zp64CoreMtgNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pcg_mtg_zp64_core_rss19_Rss19Zp64CoreMtgNativeUtils.h
mpc4j-native-fhe/pir/: edu_alibaba_mpc4j_s2pc_pir_batchindex_psipir_Lpzg24BatchIndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_batchindex_psipir_Lpzg24BatchIndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_batchindex_vectorizedpir_Mr23BatchIndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_batchindex_vectorizedpir_Mr23BatchIndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_batch_psipir_Lpzl24BatchIndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_batch_psipir_Lpzl24BatchIndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_batch_vectorizedpir_Mr23BatchIndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_batch_vectorizedpir_Mr23BatchIndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_fastpir_Ayaa21IndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_fastpir_Ayaa21IndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_onionpir_Mcr21IndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_onionpir_Mcr21IndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_sealpir_Acls18IndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_sealpir_Acls18IndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_single_constantweightpir_Mk22SingleIndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_single_constantweightpir_Mk22SingleIndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_single_fastpir_Ayaa21SingleIndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_single_fastpir_Ayaa21SingleIndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_single_mulpir_Alpr21SingleIndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_single_mulpir_Alpr21SingleIndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_single_onionpir_Mcr21SingleIndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_single_onionpir_Mcr21SingleIndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_single_sealpir_Acls18SingleIndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_single_sealpir_Acls18SingleIndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_single_vectorizedpir_Mr23SingleIndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_single_vectorizedpir_Mr23SingleIndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_single_xpir_Mbfk16SingleIndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_single_xpir_Mbfk16SingleIndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_vectorizedpir_Mr23IndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_vectorizedpir_Mr23IndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_index_xpir_Mbfk16IndexPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_index_xpir_Mbfk16IndexPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_keyword_aaag22_Aaag22KwPirNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pir_keyword_aaag22_Aaag22KwPirNativeUtils.h  edu_alibaba_mpc4j_s2pc_pir_keyword_cmg21_Cmg21KwPirNativeClient.cpp  edu_alibaba_mpc4j_s2pc_pir_keyword_cmg21_Cmg21KwPirNativeClient.h  edu_alibaba_mpc4j_s2pc_pir_keyword_cmg21_Cmg21KwPirNativeParamsChecker.cpp  edu_alibaba_mpc4j_s2pc_pir_keyword_cmg21_Cmg21KwPirNativeParamsChecker.h  edu_alibaba_mpc4j_s2pc_pir_keyword_cmg21_Cmg21KwPirNativeServer.cpp  edu_alibaba_mpc4j_s2pc_pir_keyword_cmg21_Cmg21KwPirNativeServer.h  (+8 more)
mpc4j-native-fhe/tfhe/: params.h  rns.h  tfhe.cpp  tfhe.h  util.cpp  util.h
mpc4j-native-fhe/upsi/: edu_alibaba_mpc4j_s2pc_pso_upsi_cmg21_Cmg21UpsiNativeClient.cpp  edu_alibaba_mpc4j_s2pc_pso_upsi_cmg21_Cmg21UpsiNativeClient.h  edu_alibaba_mpc4j_s2pc_pso_upsi_cmg21_Cmg21UpsiNativeParamsChecker.cpp  edu_alibaba_mpc4j_s2pc_pso_upsi_cmg21_Cmg21UpsiNativeParamsChecker.h  edu_alibaba_mpc4j_s2pc_pso_upsi_cmg21_Cmg21UpsiNativeServer.cpp  edu_alibaba_mpc4j_s2pc_pso_upsi_cmg21_Cmg21UpsiNativeServer.h  edu_alibaba_mpc4j_s2pc_pso_upsi_cmg21_Cmg21UpsiNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_pso_upsi_cmg21_Cmg21UpsiNativeUtils.h
mpc4j-native-fhe/upso/: edu_alibaba_mpc4j_s2pc_upso_ucpsi_sj23_pdsm_Sj23PdsmUcpsiNativeUtils.h  edu_alibaba_mpc4j_s2pc_upso_ucpsi_sj23_peqt_Sj23PeqtUcpsiNativeUtils.h  edu_alibaba_mpc4j_s2pc_upso_upsi_cmg21_Cmg21UpsiNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_upso_upsu_tcl23_Tcl23UpsuNativeUtils.cpp  edu_alibaba_mpc4j_s2pc_upso_upsu_tcl23_Tcl23UpsuNativeUtils.h
mpc4j-native-fourq/: CMakeLists.txt  FourQ.h  FourQ_api.h  FourQ_internal.h  FourQ_params.h  FourQ_tables.h  README.md  crypto_util.c  eccp2.c  eccp2_core.c  eccp2_no_endo.c  hash_to_curve.c  kex.c  schnorrq.c  table_lookup.h
mpc4j-native-fourq/AMD64/: consts.c  fp2_1271.S  fp2_1271_AVX2.S  fp_x64.h
mpc4j-native-fourq/ARM64/: fp_arm64.h
mpc4j-native-fourq/generic/: fp.h
mpc4j-native-fourq/random/: random.c  random.h
mpc4j-native-fourq/sha512/: sha512.c  sha512.h
mpc4j-native-fourq/tests/: crypto_tests.c  ecc_tests.c  fp_tests.c  test_extras.c  test_extras.h
mpc4j-native-tool/: CMakeLists.txt  README.md
mpc4j-native-tool/benes_network/: benes_network.cpp  benes_network.h  edu_alibaba_mpc4j_common_tool_benes_NativeBenesNetwork.cpp  edu_alibaba_mpc4j_common_tool_benes_NativeBenesNetwork.h
mpc4j-native-tool/bit_matrix_trans/: bit_matrix_trans.h  edu_alibaba_mpc4j_common_tool_bitmatrix_trans_NativeTransBitMatrix.cpp  edu_alibaba_mpc4j_common_tool_bitmatrix_trans_NativeTransBitMatrix.h
mpc4j-native-tool/common/: block.h  defines.cpp  defines.h  sse2neon.h  stdc++.h
mpc4j-native-tool/crypto/: aes.h  blake2b_hash.h  blake2b_kdf.h  blake3_hash.h  blake3_kdf.h  edu_alibaba_mpc4j_common_tool_crypto_hash_NativeBlake2b160Hash.cpp  edu_alibaba_mpc4j_common_tool_crypto_hash_NativeBlake2b160Hash.h  edu_alibaba_mpc4j_common_tool_crypto_hash_NativeBlake3Hash.cpp  (+10 more)
(+6924 files in other folders)
